# shell_auto_programming

install/: local_setup.sh  setup.sh
install/shell_simulation/lib/shell_simulation/: control_node  perception_node  planning_node
install/shell_simulation/share/shell_simulation/: package.dsv  package.ps1  package.sh  package.xml
install/shell_simulation/share/shell_simulation/config/: waypoints.yaml
install/shell_simulation/share/shell_simulation/launch/: shell_simulation.launch.py
log/: latest_build  latest_list
src/shell_simulation/: package.xml  setup.py
src/shell_simulation/launch/: shell_simulation.launch.py
src/shell_simulation/shell_simulation/: control_node.py  perception_node.py  planning_node.py
src/shell_simulation/shell_simulation/prompts/: error.txt  prompt.txt
